Minor bug fixing on Azure Service Bus area

--- a/Microservice A/appsettings.json
+++ b/Microservice A/appsettings.json
@@ -10,7 +10,7 @@
     "TargetUrl": "http://localhost:5229/api/TestAPI/hit/"
   },
   "ServiceBus": {
-    "ConnectionString": "Endpoint=sb://radiocom.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=xXCTCuCnMxmb7Gpx2IgafCJSGK/Lq3+NpqUOhIDXqII=",
+    "ConnectionString": "",
     "QueueName": "testque",
     "TopicName": "radiocom",
     "SubscriptionName": "Echo"
