--- a/Microservice C/appsettings.json
+++ b/Microservice C/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceBus": {
-    "ConnectionString": "",
+    "ConnectionString": "Endpoint=sb://radiocom.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=xXCTCuCnMxmb7Gpx2IgafCJSGK/Lq3+NpqUOhIDXqII=",
     "QueueName": "testque",
     "TopicName": "radiocom",
     "SubscriptionName": "Echo"
